# bns-server

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  deploy.sh  schema.sql  server-ca.pem
.sqlx/: query-017e75faa4fcfd3a2c14cff9449e28879ba52db0580b35ae156f74f4426703db.json  query-043ec86d18269da2f9c934fb5551bb0d24660c2cff639026749ccf7909472736.json  query-08e65beb9b578eac6102d28a79c29ddd7a0aa9aefb65d76eb843b0d3ede205fd.json  query-09163b4d7c4e0e75f111867f9ae81d4671aca576ea84fe9581eeb2d7cf10b939.json  query-0e796b23aaf90494a2df4daf14aa06ebeb0c888a3a74e9a3de2d80cb676d15ab.json  query-1262e654a9238cd02d3ea231291d7c9da15033e9ebc8861b7140e72480b6ad48.json  query-155f04f96b3c1792b86629293af71c845ed321e8919204d919f197c15674a541.json  query-157107d6bfc5b7e9d50422ec3e5d58bc15ad894aead44dc3c6907eecfe4d31d3.json  query-1ef715460b3aa5176d6863b8b8f13c2a30f302c979c8fec8666e31b02a2ced61.json  query-1f9ad781081c4f0dabb6e05b0879c68279c5b658706f6ddccaf55f1064a11935.json  query-2350371bebf6979bb1f8ecede361b8452ca48de17443c5fd292634c5d0b27825.json  query-2485d1f3503c4e362934c6902b6f84c00ed537ccd885a7fd773e10d5c76d9289.json  query-25545813bd46a2a09a250db3ec5dbaed9a4480830d35f6e546e95c76b403f9fa.json  query-26a84e389ff642d504f4ce9b48e3bc45913a95172bb6906af4c94a4850f49dae.json  query-2be5ad88bfcad3ec6b177906a1d687616b22bc6a8e59a977137a016dbd980320.json  query-2f7ebdfa17a7a7537f7775485eb8d22fde099500d09c6ce2ac32c3a575ebdb4d.json  query-3307f09d468b340a4d4aaac236bfe9c19f4d1a653888c135fae9269ef41ea3c8.json  query-35e6fc47079f9a0c231250d5224522dc17542e780bf199702b99d06f7aca7d26.json  query-36caba479a28f67d5166cd7c8d6b5d0a7219e8852c7db5e414ebe5115fdf3771.json  query-3a0886cddd6e32fe917faa9ff86af0b35a9eca278893b98dd008ca592a28eba4.json  query-41a9f59252658a9fd72af1fe3072360154c71983fef2e4399024c6fb19545db1.json  query-4325b3c128cda22f5d45e6a52d3365e0fb509930d29a30e2a2ae07acadb22f1f.json  query-43fd01aee903ad9d9ac5c1c5f512bfc2b225df6829b28c5af70c0084753c23c7.json  query-4b855ff65d2caaeb6f48139c6f604b089e306eef94de3e9b1f418f19f2cc29bc.json  query-4bfe1f15ba517f485f75997dd83861d38fee37c016afe253560da1c815b7d454.json  query-4e36e721f8e224b8d3ed0a93fabe3249ace3d7136067c4f0617cf0be4985d5cb.json  query-52e738691ad42c2959a916609708fa7063545fe7a0cd497cebad07683a6a8b7f.json  query-5345775a6cde19ff52c9e7442d463ac8ca1bb6b87707877265259db4bb0bf4c3.json  query-555e2f95988507028305460b4cca22efdbb0f6445cc714e297308541990c4ee0.json  query-59a658d591426058ca028b05f876689fa294c5f94a19d25cbd8c7eebc728ba5d.json  query-5c7f7160aff0a0a7fdf15010684aa25a8da08c1b7cab0237524a03433b72863b.json  query-5d6140e2f6e132e654f30de6344af10c332ba490cb267a0fa5b98f01e27d8b14.json  query-60063a253a110bd4d02c28ebcbc64530bd45afeb0e6337a22b6566d85021aba0.json  query-62290bd122189626e21eef322a6dfaf1e097ff307607492d5de25f791e50068c.json  query-64ca57f11496d7180405e7114cdbaaca03a2aed0e8e9967c464de475b4e74e59.json  query-662693700da7f0b81390f901653f1845d4fa141584b1e5a3ee421febe77c67ba.json  query-7455b8e3c7034ec25673c769e5405d43b129e6bb3842b326519a3e53c78e9d3c.json  (+35 more)
(+89 files in other folders)
