[package]
name = "bns-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
time = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.40.0", features = ["macros"]  }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# Redis
redis = { version = "1.0.2", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp"] }

# Authentication / Crypto
sha2 = "0.10"
base64 = "0.22"
bip322 = "0.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Configuration
dotenvy = "0.15"

# WebSocket
futures-util = "0.3"

# Encoding
hex = "0.4"

# IC Agent
ic-agent = { version = "0.45", features = ["pem"] }
candid = "0.10"
serde_bytes = "0.11"

# Bitcoin
bitcoin = "0.32"
lazy_static = "1.5.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }